set viewport; minor tweaks to descriptions

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Leon Allen
 ---
 <h3>Experience</h3>
 <h4>Software Engineer | ADTRAN | May 2015 - Present</h4>
-As a member of one of our 'DevOps' teams, I was responsible for providing developer support for and day-to-day maintenace of services and infrastructure provided to our software engineers such as Jenkins, Artifactory, and Github. I was also involved in the investigation and integration of various similar and related tools (e.g. AWS, OpenStack) into our software pipeline.
+As a DevOps specialist, I was responsible for providing developer support for and day-to-day maintenace of services and infrastructure provided to our software engineers such as Jenkins, Artifactory, and Github. I was also involved in the investigation and integration of various similar and related tools (e.g. AWS, OpenStack) into our software pipeline.
 <h3>Skills</h3>
 Programming languages
 Methodologies
