--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@ layout: default
 title: Leon Allen
 ---
 <h3>Experience</h3>
-<h4>Software Engineer | ADTRAN | May 2015 - Present</h4>
+<strong>Software Engineer | ADTRAN | May 2015 - Present</strong>
 As a DevOps specialist, I was responsible for providing developer support for and day-to-day maintenace of services and infrastructure provided to our software engineers such as Jenkins, Artifactory, and Github. I was also involved in the investigation and integration of various similar and related tools (e.g. AWS, OpenStack) into our software pipeline.
 <h3>Skills</h3>
 Programming languages
 Methodologies
 <h3>Education</h3>
-<h4>Tennessee Technological University | Bachelor of Science</h4>
+<strong>Tennessee Technological University | Bachelor of Science</strong>
 Major: Software Engineering
 Focus: Software and Scientific Applications
 Relevant Coursework: Data Structures and Algorithms, Discrete Structures for Computer Science, Object-Oriented Programming and Design, Unix Laboratory, Computer Organization and Assembly Language Programming, Design of Algorithms, Foundations of Computer Science (Honors), Calculus (I & II), Matrix Algebra, Artificial Intelligence, Database Management Systems, Practical and Professional Issues in Computer Science, Introduction to Probability and Statistics, Operating Systems, Computer Networks, Computer Architecture, Programming Languages (Honors), Software Engineering I
