--- a/index.html
+++ b/index.html
@@ -6,10 +6,39 @@ title: Leon Allen
 <strong>Software Engineer | ADTRAN | May 2015 - Present</strong>
 As a DevOps specialist, I was responsible for providing developer support for and day-to-day maintenace of services and infrastructure provided to our software engineers such as Jenkins, Artifactory, and Github. I was also involved in the investigation and integration of various similar and related tools (e.g. AWS, OpenStack) into our software pipeline.
 <h3>Skills</h3>
-Programming languages
-Methodologies
+<strong>Programming languages</strong>
+<ul>
+  <li>Bash</li>
+  <li>Ruby</li>
+  <li>Groovy (Jenkins pipeline subset)</li>
+</ul>
+<strong>Methodologies</strong>
+<ul>
+  <li>Agile</li>
+  <li>SAFe 4.0</li>
+</ul>
 <h3>Education</h3>
 <strong>Tennessee Technological University | Bachelor of Science</strong>
-Major: Software Engineering
-Focus: Software and Scientific Applications
-Relevant Coursework: Data Structures and Algorithms, Discrete Structures for Computer Science, Object-Oriented Programming and Design, Unix Laboratory, Computer Organization and Assembly Language Programming, Design of Algorithms, Foundations of Computer Science (Honors), Calculus (I & II), Matrix Algebra, Artificial Intelligence, Database Management Systems, Practical and Professional Issues in Computer Science, Introduction to Probability and Statistics, Operating Systems, Computer Networks, Computer Architecture, Programming Languages (Honors), Software Engineering I
+<strong>Major:</strong> Software Engineering
+<strong>Focus:</strong> Software and Scientific Applications
+<strong>Relevant Coursework:</strong>
+<ul>
+  <li>Data Structures and Algorithms</li>
+  <li>Discrete Structures for Computer Science</li>
+  <li>Object-Oriented Programming and Design</li>
+  <li>Unix Laboratory</li>
+  <li>Computer Organization and Assembly Language Programming</li>
+  <li>Design of Algorithms</li>
+  <li>Foundations of Computer Science (Honors)</li>
+  <li>Calculus (I & II)</li>
+  <li>Matrix Algebra</li>
+  <li>Artificial Intelligence</li>
+  <li>Database Management Systems</li>
+  <li>Practical and Professional Issues in Computer Science</li>
+  <li>Introduction to Probability and Statistics</li>
+  <li>Operating Systems</li>
+  <li>Computer Networks</li>
+  <li>Computer Architecture</li>
+  <li>Programming Languages (Honors)</li>
+  <li>Software Engineering I</li>
+</ul>
