--- a/index.html
+++ b/index.html
@@ -2,26 +2,31 @@
 layout: default
 title: Leon Allen
 ---
-<h3>Experience</h3>
+<h2>Experience</h2>
 <strong>Software Engineer | ADTRAN | May 2015 - Present</strong>
-As a DevOps specialist, I was responsible for providing developer support for and day-to-day maintenace of services and infrastructure provided to our software engineers such as Jenkins, Artifactory, and Github. I was also involved in the investigation and integration of various similar and related tools (e.g. AWS, OpenStack) into our software pipeline.
-<h3>Skills</h3>
+<p>As a DevOps specialist, I was responsible for providing developer support for and day-to-day maintenace of services and infrastructure provided to our software engineers such as Jenkins, Artifactory, and Github. I was also involved in the investigation and integration of various similar and related tools (e.g. AWS, OpenStack) into our software pipeline.</p>
+
+
 <strong>Programming languages</strong>
 <ul>
   <li>Bash</li>
   <li>Ruby</li>
   <li>Groovy (Jenkins pipeline subset)</li>
 </ul>
+
 <strong>Methodologies</strong>
 <ul>
   <li>Agile</li>
   <li>SAFe 4.0</li>
 </ul>
-<h3>Education</h3>
+
+
+<h2>Education</h2>
 <strong>Tennessee Technological University | Bachelor of Science</strong>
-<strong>Major:</strong> Software Engineering
-<strong>Focus:</strong> Software and Scientific Applications
-<strong>Relevant Coursework:</strong>
+<p><strong>Major:</strong> Software Engineering</p>
+<p><strong>Focus:</strong> Software and Scientific Applications</p>
+
+<p><strong>Relevant Coursework:</strong></p>
 <ul>
   <li>Data Structures and Algorithms</li>
   <li>Discrete Structures for Computer Science</li>
