--- a/about.html
+++ b/about.html
@@ -3,4 +3,4 @@ layout: default
 title: Leon Allen
 ---
 <h3>The Site</h3>
-<p>The purpose of this site is to serve as a landing page for my own projects as well as provide a little information about myself and my experience. My intention is to make this website simple and accessible with regard to both technical constraints and disabilities. I value simplicity in architecture, design, and code.</p>
+<p>The purpose of this site is to serve as a landing page for my own projects as well as provide a little information about myself and my experience. My intention is to make this website simple and accessible with regard to both technical constraints and disabilities. This site should require very little data and be accessible regardless of  device, operating system, or browser/browser version. I also aim for it to be accessible to those with disabilities. I value simplicity in architecture, design, and code.</p>
