minor updates & write first blog post

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ title: Leon Allen
 <strong>Programming languages</strong>
 <ul>
   <li>Bash</li>
+  <li>Python</li>
   <li>Ruby</li>
   <li>Groovy (Jenkins pipeline subset)</li>
 </ul>
@@ -45,5 +46,5 @@ title: Leon Allen
   <li>Computer Networks</li>
   <li>Computer Architecture</li>
   <li>Programming Languages (Honors)</li>
-  <li>Software Engineering I</li>
+  <li>Software Engineering I & II</li>
 </ul>
