--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Leon Allen
 ---
 <h2>Experience</h2>
 <strong>Software Engineer | ADTRAN | May 2015 - Present</strong>
-<p>As a DevOps specialist, I was responsible for providing developer support for and day-to-day maintenace of services and infrastructure provided to our software engineers such as Jenkins, Artifactory, and Github. I was also involved in the investigation and integration of various similar and related tools (e.g. AWS, OpenStack) into our software pipeline.</p>
+<p>As a DevOps specialist, I am responsible for providing developer support for and day-to-day maintenace of services and infrastructure provided to our software engineers such as AWS, Jenkins, Artifactory, and Github. I was also involved in the investigation and integration of various similar and related tools (e.g. AWS, OpenStack) into our software pipeline.</p>
 
 
 <strong>Programming languages</strong>
