--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Leon Allen
 ---
 <h2>Experience</h2>
 <strong>Software Engineer | ADTRAN | May 2015 - Present</strong>
-<p>As a DevOps specialist, I am responsible for providing developer support for and day-to-day maintenace of services and infrastructure provided to our software engineers such as AWS, Jenkins, Artifactory, and Github. I was also involved in the investigation and integration of various similar and related tools (e.g. AWS, OpenStack) into our software pipeline.</p>
+<p>As a DevOps specialist since summer 2017, I am responsible for providing developer support for and day-to-day maintenace of services and infrastructure provided to our software engineers such as AWS, Jenkins Platform, Artifactory, and Github Enterprise. I have also been involved in the investigation and integration of various similar and related tools (e.g. AWS, OpenStack) into our software pipeline, as well as the integration of metrics collection and presentation solutions into our infrastructure (Netdata, Prometheus, Grafana). Previously I have worked as a co-op on some of our router products (C++), and in Product Qualification.</p>
 
 
 <strong>Programming languages</strong>
@@ -15,12 +15,16 @@ title: Leon Allen
   <li>Groovy (Jenkins pipeline subset)</li>
 </ul>
 
+<strong>Operating Systems</strong>
+<ul>
+  <li>Linux - especially Debian/Ubuntu-based distributions</li>
+</ul>
+
 <strong>Methodologies</strong>
 <ul>
   <li>Agile</li>
   <li>SAFe 4.0</li>
 </ul>
-
 
 <h2>Education</h2>
 <strong>Tennessee Technological University | Bachelor of Science</strong>
