add minima theme

--- a/blog.html
+++ b/blog.html
@@ -1,6 +1,6 @@
 ---                                                                             
 layout: default
-title: Leon Allen
+title: Blog
 ---
 
 {{ site.posts }}
