--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Leon Allen
+title: About Me
 ---
 <h2>Experience</h2>
 <strong>Software Engineer | ADTRAN | May 2015 - Present</strong>
