fix post layout, add layouts, add new landing page, and remove some unneeded code

--- a/index.html
+++ b/index.html
@@ -1,54 +1,3 @@
 ---
-layout: default
-title: About Me
+layout: home
 ---
-<h2>Experience</h2>
-<strong>Software Engineer | ADTRAN | May 2015 - Present</strong>
-<p>As a DevOps specialist since summer 2017, I am responsible for providing developer support for and day-to-day maintenace of services and infrastructure provided to our software engineers such as AWS, Jenkins Platform, Artifactory, and Github Enterprise. I have also been involved in the investigation and integration of various similar and related tools (e.g. AWS, OpenStack) into our software pipeline, as well as the integration of metrics collection and presentation solutions into our infrastructure (Netdata, Prometheus, Grafana). Previously I have worked as a co-op on some of our router products (C++), and in Product Qualification.</p>
-
-
-<strong>Programming languages</strong>
-<ul>
-  <li>Bash</li>
-  <li>Python</li>
-  <li>Ruby</li>
-  <li>Groovy (Jenkins pipeline subset)</li>
-</ul>
-
-<strong>Operating Systems</strong>
-<ul>
-  <li>Linux - especially Debian/Ubuntu-based distributions</li>
-</ul>
-
-<strong>Methodologies</strong>
-<ul>
-  <li>Agile</li>
-  <li>SAFe 4.0</li>
-</ul>
-
-<h2>Education</h2>
-<strong>Tennessee Technological University | Bachelor of Science</strong>
-<p><strong>Major:</strong> Software Engineering</p>
-<p><strong>Focus:</strong> Software and Scientific Applications</p>
-
-<p><strong>Relevant Coursework:</strong></p>
-<ul>
-  <li>Data Structures and Algorithms</li>
-  <li>Discrete Structures for Computer Science</li>
-  <li>Object-Oriented Programming and Design</li>
-  <li>Unix Laboratory</li>
-  <li>Computer Organization and Assembly Language Programming</li>
-  <li>Design of Algorithms</li>
-  <li>Foundations of Computer Science (Honors)</li>
-  <li>Calculus (I & II)</li>
-  <li>Matrix Algebra</li>
-  <li>Artificial Intelligence</li>
-  <li>Database Management Systems</li>
-  <li>Practical and Professional Issues in Computer Science</li>
-  <li>Introduction to Probability and Statistics</li>
-  <li>Operating Systems</li>
-  <li>Computer Networks</li>
-  <li>Computer Architecture</li>
-  <li>Programming Languages (Honors)</li>
-  <li>Software Engineering I & II</li>
-</ul>
