reorg skills & add a few previously ommitted

--- a/aboutme.html
+++ b/aboutme.html
@@ -7,21 +7,15 @@ title: About Me
 <p>As a DevOps specialist since summer 2017, I am responsible for providing developer support for and day-to-day maintenace of services and infrastructure provided to our software engineers such as AWS, Jenkins Platform, Artifactory, and Github Enterprise. I have also been involved in the investigation and integration of various similar and related tools (e.g. AWS, OpenStack) into our software pipeline, as well as the integration of metrics collection and presentation solutions into our infrastructure (Netdata, Prometheus, Grafana). Previously I have worked as a co-op on some of our router products (C++), and in Product Qualification.</p>
 
 
-<strong>Programming languages</strong>
+<strong>Skills</strong>
 <ul>
   <li>Bash</li>
   <li>Python</li>
   <li>Ruby</li>
   <li>Groovy (Jenkins pipeline subset)</li>
-</ul>
-
-<strong>Operating Systems</strong>
-<ul>
+  <li>Docker</li>
+  <li>AWS</li>
   <li>Linux - especially Debian/Ubuntu-based distributions</li>
-</ul>
-
-<strong>Methodologies</strong>
-<ul>
   <li>Agile</li>
   <li>SAFe 4.0</li>
 </ul>
