add a few previously ommitted

--- a/aboutme.html
+++ b/aboutme.html
@@ -15,6 +15,9 @@ title: About Me
   <li>Groovy (Jenkins pipeline subset)</li>
   <li>Docker</li>
   <li>AWS</li>
+  <li>Github Enterprise</li>
+  <li>Jenkins Platform</li>
+  <li>Artifactory</li>
   <li>Linux - especially Debian/Ubuntu-based distributions</li>
   <li>Agile</li>
   <li>SAFe 4.0</li>
