--- a/aboutme.html
+++ b/aboutme.html
@@ -12,6 +12,8 @@ title: About Me
   <li>Bash</li>
   <li>Python</li>
   <li>Ruby</li>
+  <li>C++</li>
+  <li>Java</li>
   <li>Groovy (Jenkins pipeline subset)</li>
   <li>Docker</li>
   <li>AWS</li>
