--- a/aboutme.html
+++ b/aboutme.html
@@ -20,7 +20,7 @@ title: About Me
   <li>Github Enterprise</li>
   <li>Jenkins Platform</li>
   <li>Artifactory</li>
-  <li>Linux - especially Debian/Ubuntu-based distributions</li>
+  <li>Linux</li>
   <li>Agile</li>
   <li>SAFe 4.0</li>
 </ul>
