--- a/aboutme.html
+++ b/aboutme.html
@@ -2,12 +2,25 @@
 layout: default
 title: About Me
 ---
+<p>I am an advocate for Free and Open Source Software, a dabbler in Cybersecurity, and a dedicated software engineer. I am constantly looking to learn new technologies and techniques and how they may best be used for a given system. I have experience with a wide variety of software from programming microcontrollers in the Autonomous Robotics Club (ARC) in college to maintaining business critical infrastructure such as a Jenkins Platform deployment or a proprietary cloud deployment.</p>
+
 <h2>Experience</h2>
-<strong>Software Engineer | ADTRAN | May 2015 - Present</strong>
-<p>As a DevOps specialist since summer 2017, I am responsible for providing developer support for and day-to-day maintenace of services and infrastructure provided to our software engineers such as AWS, Jenkins Platform, Artifactory, and Github Enterprise. I have also been involved in the investigation and integration of various similar and related tools (e.g. AWS, OpenStack) into our software pipeline, as well as the integration of metrics collection and presentation solutions into our infrastructure (Netdata, Prometheus, Grafana). Previously I have worked as a co-op on some of our router products (C++), and in Product Qualification.</p>
+<h4>Software Engineer | ADTRAN | May 2015 - Present</h4>
+<p>As a DevOps specialist since summer 2017 I work with an agile development team part of a Scaled agile Framework (SAFe) organization. I am responsible for providing developer support for and day-to-day maintenace of services and infrastructure provided to our software engineers such as AWS, Jenkins Platform, Artifactory, and Github Enterprise. I have also been involved in the investigation and integration of various similar and related tools (e.g. AWS, OpenStack) into our software pipeline, as well as the integration of metrics collection and presentation solutions into our infrastructure (Netdata, Prometheus, Grafana). Previously I have worked as a co-op on some of our router products (C++), and in Product Qualification.</p>
 
 
-<strong>Skills</strong>
+<h4>Skills</h4>
+
+<h5>Software</h5>
+<ul>
+  <li>Docker</li>
+  <li>AWS</li>
+  <li>Github Enterprise</li>
+  <li>Jenkins Platform</li>
+  <li>Artifactory</li>
+</ul>
+
+<h5>Languages</h5>
 <ul>
   <li>Bash</li>
   <li>Python</li>
@@ -15,14 +28,6 @@ title: About Me
   <li>C++</li>
   <li>Java</li>
   <li>Groovy (Jenkins pipeline subset)</li>
-  <li>Docker</li>
-  <li>AWS</li>
-  <li>Github Enterprise</li>
-  <li>Jenkins Platform</li>
-  <li>Artifactory</li>
-  <li>Linux</li>
-  <li>Agile</li>
-  <li>SAFe 4.0</li>
 </ul>
 
 <h2>Education</h2>
