--- a/aboutme.html
+++ b/aboutme.html
@@ -6,7 +6,7 @@ title: About Me
 
 <h2>Experience</h2>
 <h3>Software Engineer | ADTRAN | May 2014 - Present</h3>
-<p>As a DevOps specialist since summer 2017 I work with an agile development team part of a Scaled agile Framework (SAFe) organization. I am responsible for providing developer support for and day-to-day maintenace of services and infrastructure provided to our software engineers such as AWS, Jenkins Platform, Artifactory, and Github Enterprise. I have also been involved in the investigation and integration of various similar and related tools (e.g. AWS, OpenStack) into our software pipeline, as well as the integration of metrics collection and presentation solutions into our infrastructure (Netdata, Prometheus, Grafana). Previously I have worked as a co-op on some of our router products (C++), and in Product Qualification.</p>
+<p>As a DevOps specialist since summer 2017, I work with an agile development team part of a Scaled agile Framework (SAFe) organization. I am responsible for providing developer support for and day-to-day maintenance of services and infrastructure provided to our software engineers such as AWS, Jenkins Platform, Artifactory, and GitHub Enterprise. I have also been involved in the investigation and integration of various similar and related tools (e.g. AWS, OpenStack) into our software pipeline, as well as the integration of metrics collection, log aggregation, and presentation solutions into our infrastructure (Netdata, Prometheus, Grafana). Previously I have worked as a co-op on some of our router products (C++), and in Product Qualification.</p>
 
 
 <h3>Skills</h3>
