--- a/aboutme.html
+++ b/aboutme.html
@@ -18,6 +18,7 @@ title: About Me
   <li>Github Enterprise</li>
   <li>Jenkins Platform</li>
   <li>Artifactory</li>
+  <li>Linux</li>
 </ul>
 
 <h4>Languages</h4>
@@ -28,6 +29,13 @@ title: About Me
   <li>C++</li>
   <li>Java</li>
   <li>Groovy (Jenkins pipeline subset)</li>
+</ul>
+
+<h4>Methodologies</h4>
+<ul>
+  <li>Object-oriented Programming</li>
+  <li>Agile development</li>
+  <li>Scaled Agile Framework (SAFe) 4.0</li>
 </ul>
 
 <h2>Education</h2>
