update employment information

--- a/aboutme.html
+++ b/aboutme.html
@@ -5,7 +5,7 @@ title: About Me
 <p>I am an advocate for Free and Open Source Software, a dabbler in Cybersecurity, and a dedicated software engineer. I am constantly looking to learn new technologies and techniques and how they may best be used for a given system. I have experience with a wide variety of software from programming microcontrollers in the Autonomous Robotics Club (ARC) in college to maintaining business critical infrastructure such as a Jenkins Platform deployment or a proprietary cloud deployment.</p>
 
 <h2>Experience</h2>
-<h3>Software Engineer | ADTRAN | May 2014 - Present</h3>
+<h3>Software Engineer | ADTRAN | May 2014 - May 2020</h3>
 <p>As a DevOps specialist since summer 2017, I work with an agile development team part of a global Scaled agile Framework (SAFe) organization. I am responsible for providing developer support for and day-to-day maintenance of services and infrastructure provided to our software engineers such as AWS, Jenkins Platform, Artifactory, and GitHub Enterprise. I have also been involved in the investigation and integration of various similar and related tools (e.g. AWS, OpenStack) into our software pipeline, as well as the integration of metrics collection, log aggregation, and presentation solutions into our infrastructure (Netdata, Prometheus, Grafana). Previously I have worked as a co-op on some of our router products (C++), and in Product Qualification.</p>
 
 
