update software experience

--- a/aboutme.html
+++ b/aboutme.html
@@ -14,11 +14,15 @@ title: About Me
 <h4>Software</h4>
 <ul>
   <li>Docker</li>
-  <li>AWS</li>
+  <li>Amazon Web Services</li>
   <li>Github Enterprise</li>
   <li>Jenkins Platform</li>
   <li>Artifactory</li>
   <li>Linux</li>
+  <li>Grafana</li>
+  <li>Terraform</li>
+  <li>Ansible</li>
+  <li>Prometheus</li>
 </ul>
 
 <h4>Languages</h4>
